--- a/init.org
+++ b/init.org
@@ -1125,7 +1125,7 @@ Cycles through three states:
 *** Editing
 #+begin_src elisp :tangle ~/.emacs.d/elisp/org-mode.tngl.el
 (setq
- org-support-shift-select 'always
+ org-support-shift-select t
  org-hide-emphasis-markers nil
  org-edit-src-content-indentation 0
  org-src-tab-acts-natively t
