--- a/init.org
+++ b/init.org
@@ -199,26 +199,23 @@ This config aims to maximize Clojure programmer productivity through:
 (defun pm--org-reveal-inside-source-block ()
   "Temporarily switch back to org-mode, to be able to do proper unfolding"
   (interactive)
-  (let* ((org? (eq 'org-mode major-mode))
-				 (pm? (and (poly-org-mode?) (not org?))))
-		(when org?
-		  (let ((post-command-hook nil)
-	    (pm--move-overlays (lambda ()))
-			    (curr-point (point)))
-	(when pm?
-				  ;; switch to org-mode without breaking polymode
-				  (goto-char (point-min))
-				  (polymode-post-command)
-				  (goto-char curr-point))
-
-	;; now, in org-mode, properly find parent heading and unfold it
-	(org-up-element)
-	(org-fold-show-subtree)
-
-	;; go back to original point and restore the major mode
-	(goto-char curr-point)
-	(when pm?
-				  (polymode-post-command))))))
+  (save-excursion
+    (let* ((post-command-hook nil)
+           (pm--move-overlays (lambda ())))
+      ;; now, in org-mode, properly find parent heading and unfold it
+      (org-back-to-heading)
+      (pm-switch-to-buffer)
+      (let ((prev (point))
+		        (cond t))
+				(while cond
+				  (org-up-element)
+	  	  (org-show-children)
+			    (forward-char)
+			    (if (eq (char-after) 32)
+	            (setq cond nil)))
+				(goto-char prev))
+      (org-fold-show-subtree)))
+  (pm-switch-to-buffer))
 
 (use-package bm
   :ensure t
